syntax = "proto3";
package stayking.levstakeibc;

import "stayking/levstakeibc/ica_account.proto";
import "stayking/levstakeibc/validator.proto";
import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/soohoio/stayking/v2/x/levstakeibc/types";

message HostZone {
  string chain_id = 1;
  string connection_id = 2;
  string bech32prefix = 3;
  string transfer_channel_id = 4;
  ICAAccount withdrawal_account = 5;
  ICAAccount fee_account = 6;
  ICAAccount delegation_account = 7;
  string host_denom = 8;
  string ibc_denom = 9;
  string last_redemption_rate = 10 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string redemption_rate = 11 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string staked_bal = 12 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  string address = 13 [ (gogoproto.moretags) = "yaml:\"address\"" ];
  uint64 unbonding_frequency = 14;
  repeated Validator validators = 15;
  repeated Validator blacklisted_validators = 16;
}